--- a/feiDemo/app/src/main/res/values/styles.xml
+++ b/feiDemo/app/src/main/res/values/styles.xml
@@ -22,4 +22,10 @@
         <item name="android:padding">4dp</item>
     </style>
 
+    <style name="LoadProgressDialog" parent="Theme.AppCompat.Dialog">
+        <item name="android:backgroundDimEnabled">true</item><!-- 模糊 -->
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:backgroundDimAmount">0.6</item><!-- 灰度 -->
+    </style>
+
 </resources>
