change android support to androidx.

--- a/feiDemo/app/src/main/res/layout/activity_welcome.xml
+++ b/feiDemo/app/src/main/res/layout/activity_welcome.xml
@@ -5,10 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.v4.view.ViewPager
+    <androidx.viewpager.widget.ViewPager
         android:id="@+id/vp_welcome"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></android.support.v4.view.ViewPager>
+        android:layout_height="match_parent"></androidx.viewpager.widget.ViewPager>
 
     <LinearLayout
         android:id="@+id/ll_show_enter"
