--- a/feiDemo/app/src/main/res/layout/activity_androidx.xml
+++ b/feiDemo/app/src/main/res/layout/activity_androidx.xml
@@ -2,17 +2,13 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/white"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <include layout="@layout/activity_app_title"/>
-
-    <androidx.viewpager.widget.ViewPager
-        android:id="@+id/vp_remote_control_connect"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-    </androidx.viewpager.widget.ViewPager>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Hello World!"
+         />
 
 </RelativeLayout>
