--- a/feiDemo/app/src/main/res/layout/activity_main.xml
+++ b/feiDemo/app/src/main/res/layout/activity_main.xml
@@ -14,11 +14,11 @@
         android:text="Hello World!"
         />
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/tv_main">
-    </android.support.v7.widget.RecyclerView>
+    </androidx.recyclerview.widget.RecyclerView>
 
 </RelativeLayout>
