--- a/feiDemo/app/src/main/res/layout/activity_remote_control_connect.xml
+++ b/feiDemo/app/src/main/res/layout/activity_remote_control_connect.xml
@@ -25,11 +25,11 @@
         android:textColor="@color/welcome_text"
         android:text="@string/str_connection_tutorials" />
 
-    <android.support.v4.view.ViewPager
+    <androidx.viewpager.widget.ViewPager
         android:id="@+id/vp_remote_control_connect"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-    </android.support.v4.view.ViewPager>
+    </androidx.viewpager.widget.ViewPager>
 
     <LinearLayout
         android:layout_width="match_parent"
