--- a/feiDemo/app/src/main/res/layout/activity_remote_control_connect_list.xml
+++ b/feiDemo/app/src/main/res/layout/activity_remote_control_connect_list.xml
@@ -100,7 +100,7 @@
         android:layout_marginRight="10dp"
         android:src="@drawable/drone_connect_refresh_img"/>
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_drone_connect_refresh_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -109,7 +109,7 @@
         android:layout_marginRight="15dp"
         android:layout_below="@+id/tv_remote_control_list_connect_select_title"
         android:layout_alignLeft="@+id/tv_remote_control_list_connect_select_title">
-    </android.support.v7.widget.RecyclerView>
+    </androidx.recyclerview.widget.RecyclerView>
 
     <include layout="@layout/activity_app_title"/>
 
