--- a/feiDemo/app/src/main/res/layout/fragment_input_password.xml
+++ b/feiDemo/app/src/main/res/layout/fragment_input_password.xml
@@ -8,7 +8,7 @@
     android:clickable="true"
     tools:background="#098">
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
         android:layout_width="516px"
         android:layout_height="293px"
@@ -76,5 +76,5 @@
             android:text="Cancel"
             android:textColor="#fff"
             android:textSize="26sp" />
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 </FrameLayout>
