--- a/feiDemo/app/src/main/res/layout/settings_wifi_connect.xml
+++ b/feiDemo/app/src/main/res/layout/settings_wifi_connect.xml
@@ -13,7 +13,7 @@
         android:layout_height="286px"
         android:layout_marginTop="8px">
 
-        <android.support.v7.widget.RecyclerView
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_wifi_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
