add ping test. add kotlin test code.

--- a/feiDemo/app/src/main/res/layout/activity_cmd.xml
+++ b/feiDemo/app/src/main/res/layout/activity_cmd.xml
@@ -13,4 +13,11 @@
         android:text="Hello World!"
          />
 
+    <Button
+        android:id="@+id/btn_ofdm"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:text="ping ofdm"/>
+
 </RelativeLayout>
