--- a/feiDemo/app/src/main/res/layout/activity_kotlin.xml
+++ b/feiDemo/app/src/main/res/layout/activity_kotlin.xml
@@ -15,13 +15,13 @@
         android:id="@+id/btn_kotlin1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
+        android:layout_centerHorizontal="true"
         android:text="kotlin"/>
 
     <FrameLayout
         android:id="@+id/fragment_container"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:background="@color/accent_blue"
         android:layout_marginTop="50dp"
         />
