--- a/feiDemo/app/src/main/res/layout/item_left.xml
+++ b/feiDemo/app/src/main/res/layout/item_left.xml
@@ -5,15 +5,28 @@
     android:background="@color/yellow"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/tv_item"
-        android:text="标题"
-        android:layout_gravity="center"
-        android:layout_margin="5dp"
+    <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:orientation="horizontal">
 
-    </TextView>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@android:drawable/star_off"/>
+
+        <TextView
+            android:id="@+id/tv_item"
+            android:text="标题"
+            android:layout_margin="5dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+        </TextView>
+
+    </LinearLayout>
+
 
     <View
         android:layout_width="match_parent"
